modularize Reflect into Fields and Classes